# light-matrix

./: advanced.html  basics.html  dev_guide.html  genindex.html  get_started.html  index.html  objects.inv  overview.html  search.html  searchindex.js
_sources/: overview.txt
light_array/common/: arg_check.h  basic_defs.h  block.h  lang_base.h  mem_alloc.h  mem_op.h  metaprog_base.h  prim_types.h  range.h  type_traits.h
light_array/config/: config.h  platform_config.h  user_config.h
light_mat/array/: array_base.h  array_compare.h  array_copy.h  array_fill.h  array_fwd.h  array_interf.h  array_layout.h  array_meta.h  array_print.h  tarray.h
light_mat/array/bits/: array_compare_internal.h  array_copy_internal.h  array_fill_internal.h
light_mat/config/: config.h  user_config.h
light_mat/linalg/bits/: matrix_blas_proxy.h  (+2 more)
light_mat/matrix/: const_matrix.h  dense_matrix.h  dense_mutable_view.h  matrix_arith.h  matrix_cast.h  matrix_compare.h  matrix_elogical.h  matrix_ewise_eval.h  matrix_ewise_expr.h  matrix_fill.h  matrix_fwd.h  matrix_meta.h  matrix_reduce.h  matrix_repeat_eval.h  matrix_repeat_expr.h  matrix_subviews.h  matrix_transpose.h  matrix_visit_eval.h  matrix_visitors.h  partial_reduce.h  ref_matrix.h  ref_matrix_ex.h
tests/: CMakeLists.txt  linalg_test_base.h  mon_alloc.h  test_array_layout.cpp  test_array_shape.cpp  test_base.h  test_blocks.cpp  test_const_mat.cpp  test_cpd_ewise.cpp  test_dense_cast.cpp  test_dense_col.cpp  test_dense_eval.cpp  test_dense_mat.cpp  test_dense_row.cpp  test_dense_veval.cpp  test_main.cpp  test_mat_arith.cpp  test_mat_compare.cpp  test_mat_copy.cpp  test_mat_ecomp.cpp  test_mat_elogical.cpp  test_mat_emath.cpp  test_mat_reduce.cpp  test_mat_subviews.cpp  test_mat_transpose.cpp  test_partial_reduce.cpp  test_ref_col.cpp  test_ref_mat.cpp  test_ref_mat_ex.cpp  test_ref_row.cpp  test_tarray.cpp  test_vec_rep.cpp
(+2 files in other folders)
